[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
rocket = {version = "0.5.1", features = ["secrets", "json", "uuid"]}
rusqlite = "0.31.0"
sha2 = "0.10.8"
uuid = {version = "1.10.0", features = ["v4"]}


[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]
